--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     background-color: #eeeeee;
 
     padding: 40px;
+    padding-top: 10px;
     padding-bottom: 0;
 
     border-radius: 40px;
@@ -31,6 +32,11 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+#title{
+    padding: 10px;
+    font-size: 2rem;
 }
 
 label{
